--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,16 +2,22 @@
 # build.vs: ci-csharp-netstandard20-with-deployment-on-tag.yml
 #######################################################################################################################
 #
-# Standard pipeline for building and testing C# projects with target .NET Standard 2.0.
 # The pipeline runs unit tests on the following target frameworks and platforms:
 #
-# - Windows Server 2022, .NET 4.6.1      (net461)
-# - Windows Server 2022, .NET Core 3.1   (netcoreapp3.1)
-# - Windows Server 2022, .NET 5.0        (net5.0, no platform specific TPMs)
-# - Windows Server 2022, .NET 6.0        (net6.0, no platform specific TPMs)
-# - Ubuntu 20.04,        .NET Core 3.1   (netcoreapp3.1)
-# - Ubuntu 20.04,        .NET 5.0        (net5.0, no platform specific TPMs)
-# - Ubuntu 20.04,        .NET 6.0        (net6.0, no platform specific TPMs)
+# - Windows Server 2022, .NET 4.6.1      (tests with build for .NET Framework 4.6.1)
+# - Windows Server 2022, .NET 4.8        (tests with build for .NET Framework 4.8)
+# - Windows Server 2022, .NET Core 2.2   (tests with build for .NET Standard 2.0)
+# - Windows Server 2022, .NET Core 3.1   (tests with build for .NET Standard 2.1)
+# - Windows Server 2022, .NET 5.0        (tests with build for .NET 5)
+# - Windows Server 2022, .NET 6.0        (tests with build for .NET 6)
+# - Windows Server 2022, .NET 7.0        (tests with build for .NET 7)
+# - Windows Server 2022, .NET 8.0        (tests with build for .NET 8) 
+# - Ubuntu 22.04, .NET Core 2.2          (tests with build for .NET Standard 2.0)
+# - Ubuntu 22.04, .NET Core 3.1          (tests with build for .NET Standard 2.1)
+# - Ubuntu 22.04, .NET 5.0               (tests with build for .NET 5)
+# - Ubuntu 22.04, .NET 6.0               (tests with build for .NET 6)
+# - Ubuntu 22.04, .NET 7.0               (tests with build for .NET 7)
+# - Ubuntu 22.04, .NET 8.0               (tests with build for .NET 8)
 #
 # After tests have completed successfully nuget packages are created according to their specification (*.nuspec).
 # If the build was tagged with a tag starting with 'v' the nuget packages are pushed to nuget.org.
@@ -42,6 +48,12 @@ stages:
   - job: 'Build'
     steps:
     - task: UseDotNet@2
+      displayName: 'Use .NET Core 2.2 SDK'
+      inputs:
+        packageType: 'sdk'
+        version: '2.2.x'
+        installationPath: '$(Agent.ToolsDirectory)/dotnet'
+    - task: UseDotNet@2
       displayName: 'Use .NET Core 3.1 SDK'
       inputs:
         packageType: 'sdk'
@@ -59,6 +71,22 @@ stages:
         packageType: 'sdk'
         version: '6.0.x'
         installationPath: '$(Agent.ToolsDirectory)/dotnet'
+    - task: UseDotNet@2
+      displayName: 'Use .NET 7.0 SDK'
+      inputs:
+        packageType: 'sdk'
+        version: '7.0.x'
+        installationPath: '$(Agent.ToolsDirectory)/dotnet'
+    - task: UseDotNet@2
+      displayName: 'Use .NET 8.0 SDK'
+      inputs:
+        packageType: 'sdk'
+        version: '8.0.x'
+        installationPath: '$(Agent.ToolsDirectory)/dotnet'
+    - task: NuGetToolInstaller@1
+      displayName: 'Install NuGet'
+      inputs:
+        versionSpec: '6.x'
     - task: DotNetCoreCLI@2
       displayName: 'Install GitVersion'
       inputs:
@@ -118,8 +146,14 @@ stages:
   jobs:
   ######################################################################################################################
   # Job:
-  # Tests for .NET 4.6.1 on Windows
-  # Tests for .NET Core 3.1 and .NET 5.0/6.0 on Windows and Linux
+  # - .NET Framework 4.6.1 on Windows Server 2022
+  # - .NET Framework 4.8 on Windows Server 2022
+  # - .NET Core 2.2 on Windows Server 2022 and Ubuntu 22.04
+  # - .NET Core 3.1 on Windows Server 2022 and Ubuntu 22.04
+  # - .NET 5.0 on Windows Server 2022 and Ubuntu 22.04
+  # - .NET 6.0 on Windows Server 2022 and Ubuntu 22.04
+  # - .NET 7.0 on Windows Server 2022 and Ubuntu 22.04
+  # - .NET 8.0 on Windows Server 2022 and Ubuntu 22.04
   ######################################################################################################################
   - job:
     displayName: ''
@@ -128,11 +162,17 @@ stages:
       matrix:
         'Windows Server 2022':
           VmImage: 'windows-2022'
-        'Ubuntu 20.04':
-          VmImage: 'ubuntu-20.04'
+        'Ubuntu 22.04':
+          VmImage: 'ubuntu-22.04'
     pool:
       vmImage: '$(VmImage)'
     steps:
+    - task: UseDotNet@2
+      displayName: 'Use .NET Core 2.2 SDK'
+      inputs:
+        packageType: 'sdk'
+        version: '2.2.x'
+        installationPath: '$(Agent.ToolsDirectory)/dotnet'
     - task: UseDotNet@2
       displayName: 'Use .NET Core 3.1 SDK'
       inputs:
@@ -151,23 +191,50 @@ stages:
         packageType: 'sdk'
         version: '6.0.x'
         installationPath: '$(Agent.ToolsDirectory)/dotnet'
+    - task: UseDotNet@2
+      displayName: 'Use .NET 7.0 SDK'
+      inputs:
+        packageType: 'sdk'
+        version: '7.0.x'
+        installationPath: '$(Agent.ToolsDirectory)/dotnet'
+    - task: UseDotNet@2
+      displayName: 'Use .NET 8.0 SDK'
+      inputs:
+        packageType: 'sdk'
+        version: '8.0.x'
+        installationPath: '$(Agent.ToolsDirectory)/dotnet'
+    - task: NuGetToolInstaller@1
+      displayName: 'Install NuGet'
+      inputs:
+        versionSpec: '6.x'
     - task: DownloadPipelineArtifact@2
       displayName: 'Download Pipeline Artifacts'
       inputs:
         artifact: 'Binaries'
         targetPath: '$(Build.SourcesDirectory)/_build'
-    - task: VSTest@2
+    - task: DotNetCoreCLI@2
       displayName: 'Test .NET Framework 4.6.1'
       condition: eq(variables['agent.os'], 'Windows_NT')
       inputs:
-        configuration: '$(BuildConfiguration)'
-        testSelector: 'testAssemblies'
-        testAssemblyVer2: |
-          **\*Tests.dll
-          !**\.obj\**
-        searchFolder: '$(Build.SourcesDirectory)/_build'
-        runSettingsFile: '$(Build.SourcesDirectory)/src/tests.runsettings'
-        otherConsoleOptions: '/Framework:.NETFramework,Version=v4.6.1'
+        command: 'test'
+        projects: '**/*Tests/*.csproj'
+        nobuild: true
+        arguments: '--framework net461'
+    - task: DotNetCoreCLI@2
+      displayName: 'Test .NET Framework 4.8'
+      condition: eq(variables['agent.os'], 'Windows_NT')
+      inputs:
+        command: 'test'
+        projects: '**/*Tests/*.csproj'
+        nobuild: true
+        arguments: '--framework net48'
+    - task: DotNetCoreCLI@2
+      displayName: 'Test .NET Core 2.2'
+      inputs:
+        command: 'test'
+        projects: '**/*Tests/*.csproj'
+        nobuild: true
+        arguments: '--framework netcoreapp2.2'
     - task: DotNetCoreCLI@2
       displayName: 'Test .NET Core 3.1'
       inputs:
@@ -189,6 +256,20 @@ stages:
         projects: '**/*Tests/*.csproj'
         nobuild: true
         arguments: '--framework net6.0'
+    - task: DotNetCoreCLI@2
+      displayName: 'Test .NET 7.0'
+      inputs:
+        command: 'test'
+        projects: '**/*Tests/*.csproj'
+        nobuild: true
+        arguments: '--framework net7.0'
+    - task: DotNetCoreCLI@2
+      displayName: 'Test .NET 8.0'
+      inputs:
+        command: 'test'
+        projects: '**/*Tests/*.csproj'
+        nobuild: true
+        arguments: '--framework net8.0'
 
 ########################################################################################################################
 # Stage: Deployment
@@ -200,6 +281,10 @@ stages:
   ######################################################################################################################
   - job: 'Pack'
     steps:
+    - task: NuGetToolInstaller@1
+      displayName: 'Install NuGet'
+      inputs:
+        versionSpec: '6.x'
     - task: DownloadPipelineArtifact@2
       displayName: 'Download Pipeline Artifacts'
       inputs:
@@ -253,6 +338,10 @@ stages:
     condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/v')
     dependsOn: 'Pack'
     steps:
+    - task: NuGetToolInstaller@1
+      displayName: 'Install NuGet'
+      inputs:
+        versionSpec: '6.x'
     - task: DownloadPipelineArtifact@2
       displayName: 'Download Pipeline Artifacts'
       inputs:
